<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboard_screen_03">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="7dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="377dp"
            android:layout_height="288dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/onboard03_img" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="377dp"
            android:layout_height="62dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/secondary_blue"
            android:fontFamily="@font/poppins_medium"
            android:paddingTop="15dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="81dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/onboard_text_02"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="379dp"
            android:layout_height="42dp"
            android:orientation="horizontal"
            android:paddingLeft="100dp"
            android:paddingTop="10dp"
            android:paddingRight="100dp"
            android:paddingBottom="10dp">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_corners"
                android:backgroundTint="@color/accent_green" />

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_corners"
                android:backgroundTint="@color/accent_green" />

            <View
                android:id="@+id/view4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_corners"
                android:backgroundTint="@color/text_green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="200dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:height="55dp"
                android:backgroundTint="@color/accent_green"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/get_start"
                android:textColor="@color/text_green"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>