<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="250dp"
                android:backgroundTint="#00FFFFFF"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:srcCompat="@drawable/back_nav"
                app:tint="@color/text_green" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#00FFFFFF"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:srcCompat="@drawable/profile"
                app:tint="@color/text_green" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="662dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="203dp"
                android:tint="@color/text_green"
                app:srcCompat="@drawable/profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="304dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/round_corners"
                android:backgroundTint="@color/accent_green"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/username"
                    android:textColor="@color/secondary_blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/age"
                    android:textColor="@color/secondary_blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/addrs"
                    android:textColor="@color/secondary_blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/contact"
                    android:textColor="@color/secondary_blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/mail"
                    android:textColor="@color/secondary_blue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:backgroundTint="@color/text_green"
                    android:text="Edit Details"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round_corners"
            android:backgroundTint="@color/secondary_blue"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <ImageButton
                android:id="@+id/homeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:srcCompat="@drawable/home"
                app:tint="@color/accent_green" />

            <ImageButton
                android:id="@+id/calBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:srcCompat="@drawable/calendar"
                app:tint="@color/accent_green" />

            <ImageButton
                android:id="@+id/add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:scaleX="2"
                android:scaleY="2"
                app:srcCompat="@drawable/add"
                app:tint="@color/accent_green" />

            <ImageButton
                android:id="@+id/timer_go_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:srcCompat="@drawable/time"
                app:tint="@color/accent_green" />

            <ImageButton
                android:id="@+id/seting_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:srcCompat="@drawable/settings"
                app:tint="@color/accent_green" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>